--- a/magicmethods.html
+++ b/magicmethods.html
@@ -703,7 +703,7 @@ cases, the invocation is far less obvious. This appendix is devoted to exposing 
 <td>Deleting an attribute</td>
 </tr>
 <tr>
-<td><code>__getattribute(self, name)</code></td>
+<td><code>__getattribute__(self, name)</code></td>
 <td><code>self.name</code></td>
 <td>Accessing any attribute</td>
 </tr>
