--- a/magicmethods.html
+++ b/magicmethods.html
@@ -1,3 +1,11 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>A Guide to Python's Magic Methods &laquo; rafekettler.com</title>
+<meta name="description" content="A guide to all the Magic Methods in Python" />
+<meta name="keywords" content="python, programming, magic methods, object-oriented, oop" />
+<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
 <h1>A Guide to Python's Magic Methods</h1>
 <h3>Rafe Kettler</h3>
 <p>Copyright &copy; 2012 Rafe Kettler</p>
@@ -768,3 +776,17 @@ cases, the invocation is far less obvious. This appendix is devoted to exposing 
 <li><code>__cmp__</code> is gone due to redundancy with other magic methods</li>
 <li><code>__nonzero__</code> has been renamed to <code>__bool__</code></li>
 </ul>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-18615621-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+</body>
+</html>
