integer, not integral

--- a/magicmethods.html
+++ b/magicmethods.html
@@ -142,7 +142,7 @@ there, along with comments, (or even contributions!).</p>
 <dt><code>__ceil__(self)</code></dt>
 <dd>Implements behavior for <code>math.ceil()</code>, i.e., rounding up to the nearest integer.</dd>
 <dt><code>__trunc__(self)</code></dt>
-<dd>Implements behavior for <code>math.trunc()</code>, i.e., truncating to an integral.</dd>
+<dd>Implements behavior for <code>math.trunc()</code>, i.e., truncating to an integer.</dd>
 </dl>
 <h4>Normal arithmetic operators</h4>
 <p>Now, we cover the typical binary operators (and a function or two): +, -, * and the like. These are, for the most part, pretty self-explanatory.</p>
